--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,12 @@
 }
 
 body{
-  background-color: rgb(252, 246, 246);
-  width:50%;
-  justify-items: center;
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f9f9f9;
 
 
   h1{
@@ -22,7 +25,7 @@ body{
     align-items: center;
     height: 350px;
     background-color: lightskyblue;
-    border: 20px solid black;
+    border: 5px solid black;
   }
 
   .screen-container{
@@ -42,7 +45,8 @@ body{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
-    width: 200px;
+    width: 300px;
     font-size: 3rem;
+    padding: 5px;
   }
 }
